--- a/package.json
+++ b/package.json
@@ -13,12 +13,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "@react-pdf/renderer": "^4.3.0",
     "@mikecousins/react-pdf": "^8.0.1",
-    "pdfjs-dist": "^5.4.54",
-    "print-js": "^1.6.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.1",
@@ -27,25 +22,34 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.14",
+    "@react-pdf/renderer": "^4.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "colorjs.io": "^0.5.2",
     "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.471.2",
+    "pdfjs-dist": "^5.4.54",
+    "print-js": "^1.6.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6",
     "sonner": "^1.7.3",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.21",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3",
-    "vite": "^5.4.14",
-    "eslint": "^8.57.1",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "tailwindcss-animate": "^1.0.7"
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.7.3",
+    "vite": "^5.4.14"
   }
 }
